<resources>
    <string name="app_name">FruzoApp</string>
    <string name="username">Username</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="login">Log In</string>
    <string name="fname">First Name</string>
    <string name="fullname">Full Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="createaccount">New User</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Enter Password</string>
    <string name="alreadyhave">Already have an account? Login</string>
    <string name="newuser">New User</string>
    <string name="createnewaccount">Create New Account</string>
    <string name="register">Register</string>
    <string name="loading">Loading ..</string>
    <string name="home">Home</string>
    <string name="adminhome">Admin Home</string>
    <string name="customerhome">CUSTOMER HOME</string>
    <string name="adminmenu">ADMIN MENU</string>
    <string name="orderjuice">ORDER PRODUCTS</string>
    <string name="reservetable">RESERVE TABLE</string>
    <string name="addadmins">ADD ADMINS</string>
    <string name="viewadmins">VIEW ADMINS</string>
    <string name="addmenu">ADD MENU</string>
    <string name="viewmenu">VIEW MENU</string>
    <string name="ordernew">ORDER NOW</string>
    <string name="orderhistory">ORDER HISTORY</string>
    <string name="adminregistration">ADMIN REGISTRATION</string>
    <string name="nic">NIC</string>
    <string name="addnow">ADD NOW</string>
    <string name="logininfo">LOGIN INFO</string>
    <string name="userinfo">USER INFO</string>
    <string name="adminrole">Admin Role</string>
    <string name="adminlist">Admin List</string>
    <string name="editinfo">Edit Info</string>
    <string name="updateinfo">Update Info</string>
    <string name="delete">Delete</string>
    <string name="viewdetail">View Details</string>
    <string name="select">Select</string>
    <string name="editdetail">Edit Detail</string>
    <string name="thirsty">"Are You Thirsty ? "</string>
    <string name="category">Categories</string>
    <string name="juice">Juice</string>
    <string name="salad">Salad</string>
    <string name="smoothie">Smoothie</string>
    <string name="deleteadmin">Delete Admin</string>
    <string name="dialogmessag">Do You want to Delete this admin account ? </string>
    <string name="msg">Smoothie</string>
    <string name="producttype">Product Type</string>
    <string name="productname">Product Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="pricetype">Price Type</string>
    <string name="regular">Regular</string>
    <string name="large">Large</string>
    <string name="addproduct">Add Product</string>
    <string name="regularprice">Regular Price</string>
    <string name="largeprice">Large Price</string>
    <string name="update">Update</string>
    <string name="price">Price</string>
    <string name="rs">Rs.</string>
    <string name="selectqty">Select Quantity</string>
    <string name="takeawaytime">Take Away Time</string>
    <string name="placeorder">Place Order</string>
    <string name="newreservation">New Reservation</string>
    <string name="viewreservation">View Reservation</string>
    <string name="orderdetail">Order Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qtydetail">Quantity Details</string>
    <string name="total">Total</string>
    <string name="pickuptime">Pickup Time</string>
    <string name="favourit">Favourite</string>
    <string name="updateproduct">Update Product</string>
    <string name="mostpopular">Most Popular</string>
    <string name="table01">Table 01</string>
    <string name="table02">Table 02</string>
    <string name="table03">Table 03</string>
    <string name="table04">Table 04</string>
    <string name="table05">Table 05</string>
    <string name="table06">Table 06</string>
    <string name="when">When ?</string>
    <string name="atwhattime">"At What Time ? "</string>
    <string name="timeexpected">Time Expected to leave</string>
    <string name="reservfor">Reservation For</string>
    <string name="contact">Contact Details</string>
    <string name="makereserv">Make Reservation</string>
    <string name="reserdate">Reservation Date</string>
    <string name="updatereservation">Update Reservation</string>
    <string name="cancelreservation">Cancel Reservation</string>
    <string name="areyousure">Are You Sure want to</string>
    <string name="thereservation">The Reservation</string>
    <string name="yesy">Yes</string>
    <string name="non">No</string>
    <string name="channel_name">orderchanel</string>
    <string name="channel_description">order chanel</string>
    <string name="reservationtype">Reservation Type</string>
    <string-array name="reserv_types">
        <item>Standard Reservation</item>
        <item>Business</item>
        <item>Birthday Party</item>
        <item>Anniversary</item>
        <item>A Date</item>
        <item>Other</item>
    </string-array>
</resources>