<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddReservationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/when"
                android:textColor="@color/redishpink"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/datetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:onClick="openDatePicker" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/atwhattime"
                android:textColor="@color/redishpink"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/timetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:onClick="openTimePickcer" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/timeexpected"
                android:textColor="@color/redishpink"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/durationtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:onClick="loadTimepickerD" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/reservfor"
                android:textColor="@color/redishpink"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/reservfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contact"
                android:textColor="@color/redishpink"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/contactfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <Button
                android:id="@+id/button22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="makeReservation"
                android:text="@string/makereserv" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>